# analysys-services

./: .gitignore  README.md  nginx.conf  pyproject.toml  pytest.ini  run.py
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/fedresurs/: models.py  repo.py  router.py  schemas.py  utility.py
app/migrations/: env.py
app/migrations/versions/: e720fe2da98a_initial_migration.py
app/pages/: router.py
app/repository/: repo.py
app/rosreestr/: localization.json  models.py  router.py  schemas.py  utility.py
app/rosreestr/monitoring/: models.py  repo.py  schemas.py
app/rosreestr/query/: models.py  repo.py
app/rosreestr/query/order/: models.py  repo.py
app/rosreestr/tasks/: tasks.py
app/static/: scripts.js  styles.css
app/tasks/: celery.py  tasks.py
app/templates/: _redirect_flower.html  _redirect_site.html  error.html  fr.html  kad_hint.html  log-reg.html  modal_reg.html  mon_hint.html  rr.html  template.html  top_panel.html
app/tests/: conftest.py  mock_users.json
app/tests/rosreestr/unit/: utility.py
app/tests/rosreestr/unit_test/: test_utility.py
app/tests/test-fedresurs/unit_test/: test_utility.py
app/tests/test-rosreestr/unit_test/: test_utility.py
app/users/: auth.py  dependencies.py  models.py  repo.py  router.py
