[tool.poetry]
name = "fastapi-server-prj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_server_prj"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.21"
fastapi-cache = "^0.1.0"
fastapi-cache2 = "^0.2.1"
asyncpg = "^0.28.0"
passlib = "^1.7.4"
loguru = "^0.7.2"
aiohttp = "^3.8.6"
aiofiles = "^23.2.1"
pandas = "2.1.0"
celery = "^5.3.4"
flower = "^2.0.1"
gunicorn = "^21.2.0"
sqladmin = "^0.15.2"
xlsxwriter = "^3.1.8"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.329"
icecream = "^2.1.3"
pytest-asyncio = "^0.21.1"
pytest-pudb = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
